half part of blogpost

--- a/BigOnSolution/BigOn.WebUI/Areas/Admin/Views/Shared/_SideBar.cshtml
+++ b/BigOnSolution/BigOn.WebUI/Areas/Admin/Views/Shared/_SideBar.cshtml
@@ -81,7 +81,7 @@
                 </a>
                 <ul class="pcoded-submenu">
                     <li>
-                        <a asp-controller="brands" asp-action="index">
+                        <a asp-controller="blogposts" asp-action="index">
                             <span class="pcoded-mtext">Paylaşımlar</span>
                         </a>
                     </li>
