--- a/BigOnSolution/BigOn.WebUI/Areas/Admin/Views/BlogPosts/Create.cshtml
+++ b/BigOnSolution/BigOn.WebUI/Areas/Admin/Views/BlogPosts/Create.cshtml
@@ -69,9 +69,10 @@
                                 </div>
                             </div>
                             <div class="form-group row">
-                                <label for="Body" class="col-sm-2 col-form-label">Image</label>
+                                <label class="col-sm-2 col-form-label">Image</label>
                                 <div class="col-sm-10">
-                                    <input id="Image" name="Image" type="file"/>
+                                    <label class="image-viewer" for="image"></label>
+                                    <input id="image" name="image" type="file" hidden />
                                 </div>
                             </div>
                             <div class="form-group row">
@@ -98,6 +99,24 @@
 @section addjs {
     <script class="removeable" src="~/libs/ckeditor5/ckeditor.min.js"></script>
     <script>
+
+        let reader = new FileReader();
+        reader.addEventListener('load', function () {
+            let imageViewer = document.querySelector('.image-viewer');
+            imageViewer.setAttribute('style', `background-image:url(${reader.result})`);
+            //url(data;.....)
+
+            console.log(reader.result);
+        });
+        document.getElementById('image').addEventListener('change', function (e) {
+
+            console.log(e);
+            const selectedFile = e.currentTarget.files[0];
+            reader.readAsDataURL(selectedFile);
+
+        });
+
+
         ClassicEditor
             .create(document.querySelector('#body'))
             .catch(error => {
