--- a/BigOnSolution/BigOn.WebUI/Areas/Admin/Views/BlogPosts/Details.cshtml
+++ b/BigOnSolution/BigOn.WebUI/Areas/Admin/Views/BlogPosts/Details.cshtml
@@ -1,12 +1,13 @@
 ﻿@model BlogPost
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Edit";
 }
 
-<h1>Details</h1>
+<h1>Edit</h1>
 
-
+<h4>BlogPost</h4>
+<hr />
 
 <div class="page-wrapper">
     <div class="page-header">
@@ -32,7 +33,7 @@
                             <a asp-action="index">BlogPosts</a>
                         </li>
                         <li class="breadcrumb-item" style="float: left;">
-                            <span>Details</span>
+                            <span>Create</span>
                         </li>
                     </ul>
                 </div>
@@ -62,24 +63,26 @@
                         <div>
                             <div class="form-group row">
                                 <label asp-for="Title" class="col-sm-2 col-form-label"></label>
-                                <div class="col-sm-10">
-                                    <p class="form-control">
-                                        @Model.Title
-                                    </p>
-                                </div>
+                                <p>
+                                    @Model.Title
+                                </p>
                             </div>
                             <div class="form-group row">
-                                <label asp-for="Body" class="col-sm-2 col-form-label"></label>
+                                <label class="col-sm-2 col-form-label">Image</label>
                                 <div class="col-sm-10">
-                                    <p class="form-control">
-                                        @Model.Body
-                                    </p>
+                                    <label class="image-viewer" style="background-image:url(/uploads/images/@Model.ImagePath)"></label>
+                                </div>
+                            </div>
+                            <div class="form-group row" >
+                                <label asp-for="Body" class="col-sm-2 col-form-label" ></label>
+                                <div >
+                                    @Html.Raw(Model.Body);
                                 </div>
                             </div>
                             <div class="form-group row">
                                 <div class="col-12 d-flex justify-content-end">
-                                    <a asp-action="Edit" asp-route-id="@Model.Id" class="btn btn-warning mr-2">Edit</a> 
-                                    <a asp-action="Index" class="btn btn-info">Back to</a>
+                                    <a asp-action="edit" name="" asp-route-id=@Model.Id class="btn btn-warning mr-2">Edit</a>
+                                    <a asp-action="index" class="btn btn-info">Cancel</a>
                                 </div>
                             </div>
                         </div>
@@ -89,3 +92,6 @@
         </div>
     </div>
 </div>
+
+
+
