--- a/BigOnSolution/BigOn.WebUI/Areas/Admin/Views/BlogPosts/Edit.cshtml
+++ b/BigOnSolution/BigOn.WebUI/Areas/Admin/Views/BlogPosts/Edit.cshtml
@@ -4,6 +4,11 @@
     ViewData["Title"] = "Edit";
 }
 
+<h1>Edit</h1>
+
+<h4>BlogPost</h4>
+<hr />
+
 <div class="page-wrapper">
     <div class="page-header">
         <div class="row align-items-end">
@@ -28,7 +33,7 @@
                             <a asp-action="index">BlogPosts</a>
                         </li>
                         <li class="breadcrumb-item" style="float: left;">
-                            <span>Edit</span>
+                            <span>Create</span>
                         </li>
                     </ul>
                 </div>
@@ -55,7 +60,7 @@
                     <div class="card-block">
                         <h4 class="sub-title">Basic Inputs</h4>
 
-                        <form method="post" autocomplete="off">
+                        <form method="post" autocomplete="off" enctype="multipart/form-data">
                             <div class="form-group row">
                                 <label asp-for="Title" class="col-sm-2 col-form-label"></label>
                                 <div class="col-sm-10">
@@ -64,15 +69,21 @@
                                 </div>
                             </div>
                             <div class="form-group row">
+                                <label class="col-sm-2 col-form-label">Image</label>
+                                <div class="col-sm-10">
+                                    <label class="image-viewer" for="image" style="background-image:url(/uploads/images/@Model.ImagePath)"></label>
+                                    <input id="image" name="image" type="file" hidden />
+                                </div>
+                            </div>
+                            <div class="form-group row">
                                 <label asp-for="Body" class="col-sm-2 col-form-label"></label>
                                 <div class="col-sm-10">
-                                    <input asp-for="Body" class="form-control" />
+                                    <textarea asp-for="Body" class="form-control" id="body"></textarea>
                                     <span asp-validation-for="Body" class="text-danger"></span>
                                 </div>
                             </div>
                             <div class="form-group row">
                                 <div class="col-12 d-flex justify-content-end">
-                                    <input asp-for="Id"type="hidden"/>
                                     <button class="btn btn-primary mr-2">Save</button>
                                     <a asp-action="index" class="btn btn-info">Cancel</a>
                                 </div>
@@ -84,4 +95,33 @@
         </div>
     </div>
 </div>
+
+@section addjs {
+    <script class="removeable" src="~/libs/ckeditor5/ckeditor.min.js"></script>
+    <script>
+
+        let reader = new FileReader();
+        reader.addEventListener('load', function () {
+            let imageViewer = document.querySelector('.image-viewer');
+            imageViewer.setAttribute('style', `background-image:url(${reader.result})`);
+            //url(data;.....)
+
+            console.log(reader.result);
+        });
+        document.getElementById('image').addEventListener('change', function (e) {
+
+            console.log(e);
+            const selectedFile = e.currentTarget.files[0];
+            reader.readAsDataURL(selectedFile);
+
+        });
+
+
+        ClassicEditor
+            .create(document.querySelector('#body'))
+            .catch(error => {
+                console.error(error);
+            });
+    </script>
+}
 
