--- a/BigOnSolution/BigOn.WebUI/wwwroot/admin/css/style.css
+++ b/BigOnSolution/BigOn.WebUI/wwwroot/admin/css/style.css
@@ -26289,3 +26289,23 @@ td.operations {
     .image-cell > img {
         max-height: 50px;
     }
+
+.image-viewer {
+    width: 100%;
+    height: 170px;
+    min-height: 170px;
+    position: relative;
+    border: 1px solid #ccc;
+    cursor: pointer;
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: contain;
+}
+
+    .image-viewer:not([style])::before {
+        content: 'sekil secin';
+        position: absolute;
+        transform: translate(-50%,-50%);
+        left: 50%;
+        top: 50%;
+    }
