--- a/BigOnSolution/BigOn.WebUI/Views/Account/SignIn.cshtml
+++ b/BigOnSolution/BigOn.WebUI/Views/Account/SignIn.cshtml
@@ -29,7 +29,7 @@
           content="Admin , Responsive, Landing, Bootstrap, App, Template, Mobile, iOS, Android, apple, creative app">
     <meta name="author" content="#">
     <!-- Favicon icon -->
-    <link rel="icon" href="~/admin/images/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="~/assets/img/icon/favicon.png" type="image/x-icon">
     <!-- Google font-->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,800" rel="stylesheet">
     <!-- Required Fremwork -->
@@ -91,7 +91,8 @@
 
                     <form class="md-float-material form-material" method="post" autocomplete="off">
                         <div class="text-center">
-                            <img src="~/admin/images/logo.png" alt="logo.png">
+@*                            <img src="~/admin/images/logo.png" alt="logo.png">
+*@                            <img src="~/assets/img/logo/logo.png" alt="logo-image">
                         </div>
                         <div class="auth-box card">
                             <div class="card-block">
@@ -153,7 +154,7 @@
                                         </p>
                                     </div>
                                     <div class="col-md-2">
-                                        <img src="~/admin/images/auth/Logo-small-bottom.png"
+                                        <img src="~/assets/img/icon/favicon.png"
                                              alt="small-logo.png">
                                     </div>
                                 </div>
