--- a/BigOnSolution/BigOn.WebUI/Views/_ViewImports.cshtml
+++ b/BigOnSolution/BigOn.WebUI/Views/_ViewImports.cshtml
@@ -2,4 +2,4 @@
 @using BigOn.Domain.Models.Entities;
 @using BigOn.Domain.AppCode.Extensions;
 @using BigOn.Domain.AppCode.Infracture;
-@using BigOn.Domain.Models.FormData
+@using BigOn.Domain.Models.FormData;
