--- a/BigOnSolution/BigOn.WebUI/Areas/Admin/Views/BlogPosts/Create.cshtml
+++ b/BigOnSolution/BigOn.WebUI/Areas/Admin/Views/BlogPosts/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model BlogPost
+﻿@model BlogPostPostCommand
 
 @{
     ViewData["Title"] = "Create";
@@ -69,6 +69,15 @@
                                 </div>
                             </div>
                             <div class="form-group row">
+                                <label asp-for="CategoryId" class="col-sm-2 col-form-label"></label>
+                                <div class="col-sm-10">
+                                    <select asp-for="CategoryId" asp-items="ViewBag.CategoryId" class="form-control select2">
+                                        <option selected disabled>---Seçin---</option>
+                                    </select>
+                                    <span asp-validation-for="Title" class="text-danger"></span>
+                                </div>
+                            </div>
+                            <div class="form-group row">
                                 <label class="col-sm-2 col-form-label">Image</label>
                                 <div class="col-sm-10">
                                     <label class="image-viewer" for="image"></label>
@@ -80,6 +89,14 @@
                                 <div class="col-sm-10">
                                     <textarea asp-for="Body" class="form-control" id="body"></textarea>
                                     <span asp-validation-for="Body" class="text-danger"></span>
+                                </div>
+                            </div>
+                            <div class="form-group row">
+                                <label asp-for="Body" class="col-sm-2 col-form-label">Tags</label>
+                                <div class="col-sm-10">
+                                    <select multiple name="tagIds" asp-items="ViewBag.Tag" class="select2" selected-value="@Model?.tagIds.ToJsonArray()">
+                                        <option disabled selected>---Secin---</option>
+                                    </select>
                                 </div>
                             </div>
                             <div class="form-group row">
@@ -98,6 +115,8 @@
 
 @section addjs {
     <script class="removeable" src="~/libs/ckeditor5/ckeditor.min.js"></script>
+    <script class="removeable" src="~/libs/select2/dist/js/select2.full.min.js"></script>
+
     <script>
 
         let reader = new FileReader();
@@ -122,6 +141,12 @@
             .catch(error => {
                 console.error(error);
             });
+
+            $('.select2').select2();
     </script>
+}
+
+@section addcss{
+    <link rel="stylesheet" href="~/libs/select2/dist/css/select2.min.css" />
 }
 
