--- a/BigOnSolution/BigOn.WebUI/Areas/Admin/Views/BlogPosts/Details.cshtml
+++ b/BigOnSolution/BigOn.WebUI/Areas/Admin/Views/BlogPosts/Details.cshtml
@@ -80,6 +80,17 @@
                                 </div>
                             </div>
                             <div class="form-group row">
+                                <label asp-for="Body" class="col-sm-2 col-form-label"></label>
+                                <div>
+                                    <ul>
+                                        @foreach (var item in Model.TagCloud.Select(tc=>tc.Tag))
+                                       {
+                                           <li>@item.Text</li>
+                                       }
+                                    </ul>
+                                </div>
+                            </div>
+                            <div class="form-group row">
                                 <div class="col-12 d-flex justify-content-end">
                                     <a asp-action="edit" name="" asp-route-id=@Model.Id class="btn btn-warning mr-2">Edit</a>
                                     <a asp-action="index" class="btn btn-info">Cancel</a>
