--- a/BigOnSolution/BigOn.WebUI/Areas/Admin/Views/Brands/Details.cshtml
+++ b/BigOnSolution/BigOn.WebUI/Areas/Admin/Views/Brands/Details.cshtml
@@ -70,7 +70,9 @@
                             </div>
                             <div class="form-group row">
                                 <div class="col-12 d-flex justify-content-end">
-                                    <a asp-action="Edit" asp-route-id="@Model.Id" class="btn btn-warning mr-2">Edit</a> 
+                                    @if(User.HasAccess("admin.brands.edit")){
+                                        <a asp-action="Edit" asp-route-id="@Model.Id" class="btn btn-warning mr-2">Edit</a>
+                                    }
                                     <a asp-action="Index" class="btn btn-info">Back to</a>
                                 </div>
                             </div>
