--- a/BigOnSolution/BigOn.WebUI/Areas/Admin/Views/Brands/Index.cshtml
+++ b/BigOnSolution/BigOn.WebUI/Areas/Admin/Views/Brands/Index.cshtml
@@ -9,82 +9,86 @@
 @section addcss{
     <link rel="stylesheet" href="~/libs/toastr.js/toastr.css">
     <style>
-        th.operations ,
-            td.operations{
-            max-width:148px;
-            width:148px;
-            text-align:right;
-            }
+        th.operations,
+        td.operations {
+            max-width: 148px;
+            width: 148px;
+            text-align: right;
+        }
 
             th.operations i,
-            td.operations i{
-            margin:0;
-            color:#fff;
-        }
+            td.operations i {
+                margin: 0;
+                color: #fff;
+            }
     </style>
 }
 
 
-<div class="page-wrapper">
-    <div class="page-header">
-        <div class="row align-items-end">
-            <div class="col-lg-8">
-                <div class="page-header-title">
-                    <div class="d-inline">
-                        <h4>Bootstrap Border Sizes</h4>
-                        <span>
-                            lorem ipsum dolor sit amet, consectetur adipisicing
-                            elit
-                        </span>
+    <div class="page-wrapper">
+        <div class="page-header">
+            <div class="row align-items-end">
+                <div class="col-lg-8">
+                    <div class="page-header-title">
+                        <div class="d-inline">
+                            <h4>Bootstrap Border Sizes</h4>
+                            <span>
+                                lorem ipsum dolor sit amet, consectetur adipisicing
+                                elit
+                            </span>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4">
+                    <div class="page-header-breadcrumb">
+                        <ul class="breadcrumb-title">
+                            <li class="breadcrumb-item" style="float: left;">
+                                <a asp-controller="Dashboard" asp-action="index"> <i class="feather icon-home"></i> </a>
+                            </li>
+
+                            <li class="breadcrumb-item" style="float: left;">
+                                <span>Brands</span>
+                            </li>
+                        </ul>
                     </div>
                 </div>
             </div>
-            <div class="col-lg-4">
-                <div class="page-header-breadcrumb">
-                    <ul class="breadcrumb-title">
-                        <li class="breadcrumb-item" style="float: left;">
-                            <a asp-controller="Dashboard" asp-action="index"> <i class="feather icon-home"></i> </a>
-                        </li>
-                        
-                        <li class="breadcrumb-item" style="float: left;">
-                            <span>Brands</span>
-                        </li>
-                    </ul>
-                </div>
-            </div>
         </div>
-    </div>
-    <div class="page-body">
-        <div class="card">
-            <div class="card-header">
-                <h5>Horizontal Borders</h5>
-                <span>
-                    Example of <code>horizontal</code> table borders. This is a
-                    default table border style attached to <code>.table</code> class.
-                    All borders have the same grey color and style, table itself doesn't
-                    have a border, but you can add this border using
-                    <code>.table-framed</code> class added to the table with
-                    <code>.table</code> class.
-                </span>
+        <div class="page-body">
+            <div class="card">
+                <div class="card-header">
+                    <h5>Horizontal Borders</h5>
+                    <span>
+                        Example of <code>horizontal</code> table borders. This is a
+                        default table border style attached to <code>.table</code> class.
+                        All borders have the same grey color and style, table itself doesn't
+                        have a border, but you can add this border using
+                        <code>.table-framed</code> class added to the table with
+                        <code>.table</code> class.
+                    </span>
 
-            </div>
-            <div class="card-block table-border-style">
-                <div class="table-responsive">
-                    <table class="table">
-                        <thead>
-                            <tr>
-                                <th>
-                                    @Html.DisplayNameFor(model => model.Name)
-                                </th>
-                                <th>
-                                    @Html.DisplayNameFor(model => model.CreatedDate)
-                                </th>
-                                
-                                <th class="operations">
-                                    <a asp-action="Create" class="btn btn-sm btn-primary">
-                                        <i class="fa fa-plus"></i>
+                </div>
+                <div class="card-block table-border-style">
+                    <div class="table-responsive">
+                        <table class="table">
+                            <thead>
+                                <tr>
+                                    <th>
+                                        @Html.DisplayNameFor(model => model.Name)
+                                    </th>
+                                    <th>
+                                        @Html.DisplayNameFor(model => model.CreatedDate)
+                                    </th>
+
+                                @if (User.HasAccess("admin.brands.create"))
+                                {
+                                    <th class="operations">
+                                        <a asp-action="Create" class="btn btn-sm btn-primary">
+                                            <i class="fa fa-plus"></i>
                                         </a>
-                                </th>
+                                    </th>
+                                }
+
                             </tr>
                         </thead>
                         <tbody>
@@ -97,11 +101,20 @@
                                     <td>
                                         @Html.DisplayFor(modelItem => item.CreatedDate)
                                     </td>
-                                   
+
                                     <td class="operations">
-                                        <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-sm btn-warning"><i class="fa-solid fa-pencil"></i></a> 
-                                        <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-sm btn-info"><i class="fa-solid fa-eye"></i></a>
-                                        <a class="btn btn-sm btn-danger" onclick="removeEntity(@item.Id, '@item.Name')"><i class="fa-solid fa-trash-can"></i></a>
+                                        @if (User.HasAccess("admin.brands.edit"))
+                                        {
+                                            <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-sm btn-warning"><i class="fa-solid fa-pencil"></i></a>
+                                        }
+                                        @if (User.HasAccess("admin.brands.details"))
+                                        {
+                                            <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-sm btn-info"><i class="fa-solid fa-eye"></i></a>
+                                        }
+                                        @if (User.HasAccess("admin.brands.delete"))
+                                        {
+                                            <a class="btn btn-sm btn-danger" onclick="removeEntity(@item.Id, '@item.Name')"><i class="fa-solid fa-trash-can"></i></a>
+                                        }
                                     </td>
                                 </tr>
                             }
@@ -114,46 +127,49 @@
     @Html.AntiForgeryToken()
 </div>
 
-     @section addjs{
-         <script src="~/libs/sweetalert/sweetalert.min.js"></script>
+@section addjs{
+    <script src="~/libs/sweetalert/sweetalert.min.js"></script>
     <script src="~/libs/toastr.js/toastr.min.js"></script>
     <script src="~/libs/toastr.js/toastr.customize.js"></script>
 
-         <script class="removeable">
-             function removeEntity(id, name){
-                 swal(`Are you sure you want to delete ${name}?`, {
-                     title: "Diqqet!",
-                     text: `Are you sure you want to delete ${name}?`,
-                     icon: "warning",
-                     buttons: true,
-                     dangerMode: true,
-                buttons: ["No", "Yes"]
-                 })
-                    .then((value)=>{
-                       
-                        if(value == true){
+
+    @if (User.HasAccess("admin.brands.delete"))
+    {
+        <script class="removeable">
+            function removeEntity(id, name) {
+                swal(`Are you sure you want to delete ${name}?`, {
+                    title: "Diqqet!",
+                    text: `Are you sure you want to delete ${name}?`,
+                    icon: "warning",
+                    buttons: true,
+                    dangerMode: true,
+                    buttons: ["No", "Yes"]
+                })
+                    .then((value) => {
+
+                        if (value == true) {
 
                             let vToken = $('[name=__RequestVerificationToken]').val();
 
                             let formData = new FormData();
-                        formData.set('__RequestVerificationToken', vToken);
-                        formData.set('id',id);
+                            formData.set('__RequestVerificationToken', vToken);
+                            formData.set('id', id);
 
                             $.ajax({
                                 url: `@Url.Action("Delete")`,
-                            type: 'POST',
-                            data:formData,
-                            contentType: false,
-                            processData: false,
-                                success: function(response){
+                                type: 'POST',
+                                data: formData,
+                                contentType: false,
+                                processData: false,
+                                success: function (response) {
                                     console.log(response)
-                                    if(response.error == true){
-                                        toaster.error(response.message,"Xeta");
+                                    if (response.error == true) {
+                                        toaster.error(response.message, "Xeta");
                                         return;
                                     }
                                     location.reload();
                                 },
-                                error: function(errorResponse){
+                                error: function (errorResponse) {
                                     console.error(errorResponse);
                                 }
                             });
@@ -162,6 +178,7 @@
 
                     });
 
-             }
-         </script>
-     }
+            }
+        </script>
+    }
+    }
