--- a/BigOnSolution/BigOn.WebUI/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/BigOnSolution/BigOn.WebUI/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 
 
 <head>
-    <title>Adminty - Premium Admin Template by Colorlib </title>
+    <title>BigOn - Premium Admin </title>
     <!-- HTML5 Shim and Respond.js IE10 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 10]>
@@ -19,7 +19,7 @@
           content="Admin , Responsive, Landing, Bootstrap, App, Template, Mobile, iOS, Android, apple, creative app">
     <meta name="author" content="#">
     <!-- Favicon icon -->
-    <link rel="icon" href="~/admin/images/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="~/assets/img/icon/favicon.png" type="image/x-icon">
     <!-- Google font-->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600" rel="stylesheet">
     <!-- Required Fremwork -->
@@ -86,7 +86,7 @@
                             <i class="feather icon-menu"></i>
                         </a>
                         <a href="index.html">
-                            <img class="img-fluid" src="~/admin/images/logo.png" alt="Theme-Logo" />
+                            <img class="img-fluid" src="~/assets/img/logo/logo.png" alt="Theme-Logo" />
                         </a>
                         <a class="mobile-options">
                             <i class="feather icon-more-horizontal"></i>
