--- a/BigOnSolution/BigOn.WebUI/Areas/Admin/Views/BlogPosts/Index.cshtml
+++ b/BigOnSolution/BigOn.WebUI/Areas/Admin/Views/BlogPosts/Index.cshtml
@@ -88,7 +88,7 @@
                                             <img src="~/uploads/images/@item.ImagePath" class="img-fluid">
                                         }
                                     </td>
-                                    <td >
+                                    <td class="ellipse">
                                         @Html.DisplayFor(modelItem => item.Title)
                                     </td>
                                     <td class="ellipse ">
