--- a/BigOnSolution/BigOn.WebUI/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/BigOnSolution/BigOn.WebUI/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -429,6 +429,8 @@
     <script src="~/admin/js/pcoded.min.js"></script>
     <!-- custom js -->
     <script src="~/admin/js/vartical-layout.min.js"></script>
+
+    <script type="text/javascript" src="~/admin/js/script.js"></script>
     <script type="text/javascript" src="~/admin/js/script.min.js"></script>
 
     @RenderSection("addjs", required:false)
