--- a/BigOnSolution/BigOn.WebUI/Areas/Admin/Views/Shared/_SideBar.cshtml
+++ b/BigOnSolution/BigOn.WebUI/Areas/Admin/Views/Shared/_SideBar.cshtml
@@ -20,7 +20,7 @@
                     @if (User.HasAccess("admin.products.index"))
                     {
                         <li>
-                            <a asp-controller="brands" asp-action="index">
+                            <a asp-controller="products" asp-action="index">
                                 <span class="pcoded-mtext">Məhsullar</span>
                             </a>
                         </li>
