--- a/BigOnSolution/BigOn.WebUI/Areas/Admin/Views/_ViewImports.cshtml
+++ b/BigOnSolution/BigOn.WebUI/Areas/Admin/Views/_ViewImports.cshtml
@@ -3,3 +3,7 @@
 @using BigOn.Domain.Models.Entities
 @using BigOn.Domain.AppCode.Extensions
 @using BigOn.Domain.Business.BlogPostModule
+@using BigOn.Domain.Business.ProductModule\
+@using BigOn.Domain.AppCode.Infracture
+
+
