--- a/BigOnSolution/BigOn.WebUI/Areas/Admin/Views/BlogPosts/Edit.cshtml
+++ b/BigOnSolution/BigOn.WebUI/Areas/Admin/Views/BlogPosts/Edit.cshtml
@@ -95,7 +95,7 @@
                             <div class="form-group row">
                                 <label asp-for="Body" class="col-sm-2 col-form-label">Tags</label>
                                 <div class="col-sm-10">
-                                    <select multiple name="tagIds" asp-items="ViewBag.Tag" class="select2" selected-value="@Model.tagIds.ToJsonArray()">
+                                    <select multiple name="tagIds" asp-items="ViewBag.Tag" class="select2" selected-value="@Extension.ToJsonArray(Model.tagIds)">
                                         <option disabled selected>---Secin---</option>
                                     </select>
                                 </div>
@@ -143,13 +143,14 @@
                 console.error(error);
             });
             $('.select2').select2();
-            //$('select[selected-value]').each((index, item)=>{
-            //    let values = $(item).attr('selected-value');
-            //    if(values.length == 0) return;
+            $('select[selected-value]').each((index, item)=>{
+                let values = $(item).attr('selected-value');
+                console.log(values);
+                if(values.length == 0) return;
 
-            //    $(item).val(JSON.parse(values));
-            //$(item).trigger('change.select2');
-            //});
+                $(item).val(JSON.parse(values));
+            $(item).trigger('change');
+            });
     </script>
 }
 @section addcss{
