--- a/BigOnSolution/BigOn.WebUI/Views/Blog/Index.cshtml
+++ b/BigOnSolution/BigOn.WebUI/Views/Blog/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<BlogPost>
+﻿@model PagedViewModel<BlogPost>
 
 @{
     ViewData["Title"] = "Index";
@@ -30,7 +30,7 @@
         </div>
         <!-- Row End -->
         <div class="row">
-            @foreach (var item in Model)
+            @foreach (var item in Model.Items)
             {
                 <div class="col-md-4 col-sm-6">
                     <!-- Single Blog Start -->
@@ -58,9 +58,11 @@
         <div class="row">
             <div class="col-12">
                 <ul class="blog-pagination ptb-20">
-                    <li class="active"><a href="#">1</a></li>
-                    <li><a href="#">2</a></li>
-                    <li><a href="#">3</a></li>
+                    <li><a href="#"><i class="fa fa-angle-left"></i></a></li>
+                    @for(int i = 1; i<=Model.MaxPageSize; i++){
+                     <li class="@(i==Model.PageIndex?"active":"")">
+                        <a asp-route-pageIndex="@i">@i</a></li>
+                    }
                     <li><a href="#"><i class="fa fa-angle-right"></i></a></li>
                 </ul>
                 <!-- End of .blog-pagination -->
